--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,12 @@
-== README
+== API app
+See it on Heroku: [(api-app.herokuapp.com)]
+Resources:
+* Codeschool API course: Surviving APIs with Rails
+* Yelp API
+* Instagram API
+* Google API
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
-
-Things you may want to cover:
-
-* Ruby version
-
-* System dependencies
-
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
-
-
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
+Goal:
+Build an app that integrates the preceding APIs
+Build an API with Codeschool
+Do something cool with all this data!
